--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -1,5 +1,6 @@
 * {
-    margin: 0px; padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 header {
@@ -7,17 +8,117 @@ header {
     background-size: cover;
     width: 100vw;
     height: 100vh;
-
 }
 
 header div {
     padding-top: 10px;
-    display: grid; grid-template-columns: 300px 500px;
+    display: grid;
+    grid-template-columns: 300px 1fr;
     grid-template-rows: 80px;
+    border-bottom: 1px solid #c9c9c9;
 }
 
 header div h1 {
-    border: 4px solid white; color: white;
-    font-size: 28px; text-transform: uppercase;
+    border: 4px solid white;
+    color: white;
+    font-size: 28px;
+    text-transform: uppercase;
     padding: 10px;
+}
+
+header div nav ul {
+    width: 100%;
+    height: 100%;
+    color: white;
+    display: grid;
+    grid-template-columns: 120px 140px 120px 100px 100px;
+    font-size: 22px;
+    font-weight: bold;
+    list-style: none;
+    justify-content: flex-end;
+    align-content: center;
+}
+
+main section {
+    width: 70%;
+    height: 450px;
+    border: 1px solid black;
+    margin: 30px auto;
+}
+
+main section #div__h2_01 {
+    color: #ffa400;
+    letter-spacing: 4px;
+    padding-top: 22px;
+    text-align: center;
+    font-size: 14px;
+}
+
+main section #div__h2_02 {
+    font-size: 5rem;
+    text-align: center;
+}
+
+main section hr {
+    width: 120px;
+    margin: 20px auto;
+    border: 0px;
+    border-top: 1px solid gray;
+}
+
+main section p {
+    text-align: center;
+    color: #727272;
+    letter-spacing: 1px;
+    line-height: 28px;
+}
+
+
+
+main article {
+    background: url(../image/slide1.jpg);
+    background-size: cover; width: 100vw; height: 100vh;
+    padding-top: 6%;
+    box-sizing: border-box;
+}
+
+main article div{
+    width: 75%; height: 400px; 
+    border: 3px solid white; 
+    margin: 40px auto 20px auto;
+    box-shadow: 1px 1px black;
+
+}
+
+main article #div__h2_03 {
+    color: #ffa400; 
+    letter-spacing: 4px; 
+    padding-top: 22px; 
+    text-align: center; 
+    font-size: 14px;
+}
+
+main article #div__h2_04 {
+    font-size: 5rem; color: #ff8800;
+    text-align: center;
+    text-shadow: 1px 1px black;
+}
+
+main article div p {
+    text-align: center;
+    color: 	white;
+    letter-spacing: 1px;
+    line-height: 28px;
+    text-shadow: 1px 1px black;
+}
+
+address {
+    margin: 40px auto;
+}
+
+address .col {
+    border: 1px solid black;
+    height: 100px;
+    padding: 1%;
+    box-sizing: border-box; text-align: center;
 }
