--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -23,6 +23,36 @@
                 </ul>
             </nav>
         </div>
-    </header>    
+    </header>
+    <main>
+        <section>
+            <div>
+                <h2 id="div__h2_01"> Adventure Travel </h2>
+                <h2 id="div__h2_02">Connecting you to your dreams!</h2>
+                <hr>
+                <p>Welcome to Adventure Travel, your gateway to the world's most exciting and unforgettable travel experiences. Whether you're seeking a thrilling adventure or a peaceful getaway, our expertly crafted travel packages will take you on a journey of a lifetime. From hiking the stunning mountains of Patagonia to exploring the ancient temples of Cambodia, we've got something for everyone.</p>
+            </div>
+        </section>
+        <article>
+            <div>
+                <h2 id="div__h2_03"> Active People </h2>
+                <h2 id="div__h2_04"> Who we are </h2>
+                <hr>
+                <p>Welcome to Adventure Travel, your gateway to the world's most exciting and unforgettable travel experiences. Whether you're seeking a thrilling adventure or a peaceful getaway, our expertly crafted travel packages will take you on a journey of a lifetime. From hiking the stunning mountains of Patagonia to exploring the ancient temples of Cambodia, we've got something for everyone.</p>
+            </div>
+        </article>
+    </main>
+    <address class="container">
+        <div class="row">
+            <div class="col">
+                <h3>E-MAIL</h3>
+                <span>contact@adventuretravel.com</span>
+            </div>
+            <div class="col">
+                <h3>PHONES</h3>
+                <span>(14)9 9999.8888  | (14)9 9898.8787</span>
+            </div>
+        </div>
+    </address>
 </body>
 </html>
